
https://docs.netapp.com/us-en/bluexp-classification/task-exclude-scan-paths.html["Weitere Informationen ."].



== 10. Januar 2024 (Version 1.27)



=== Die Ergebnisse der Untersuchungsseite zeigen jetzt zusätzlich zur Gesamtanzahl der Elemente die Gesamtgröße an

Die gefilterten Ergebnisse auf der Untersuchungsseite zeigen nun zusätzlich zur Gesamtanzahl der Dateien die Gesamtgröße der Elemente an. Dies kann beim Verschieben von Dateien, beim Löschen von Dateien und vielem mehr helfen.



=== Zusätzliche Gruppen-IDs als „für Organisation offen“ konfigurieren

Nun können Sie Gruppen-IDs in NFS so konfigurieren, dass sie direkt aus der BlueXP-Klassifizierung als „Open to Organization“ betrachtet werden, wenn die Gruppe ursprünglich nicht mit dieser Berechtigung festgelegt wurde. Alle Dateien und Ordner, denen diese Gruppen-IDs angehängt sind, werden auf der Seite „Untersuchungsdetails“ als „für Organisation offen“ angezeigt. Informieren Sie sich darüber https://docs.netapp.com/us-en/bluexp-classification/task-add-group-id-as-open.html["Zusätzliche Gruppen-IDs als „für Organisation offen“ hinzufügen"].



== 14. Dezember 2023 (Version 1.26.6)

Diese Version enthält einige kleinere Verbesserungen.

Das Release hat auch vorübergehend die folgenden Optionen entfernt:

* Die Option zum Aktivieren der Überwachungsprotokollsammlung wurde deaktiviert. Siehe link:task-manage-file-access-events.html["Überwachen und managen Sie Dateizugriffsereignisse"].
* Bei der Untersuchung der Verzeichnisse steht die Möglichkeit zur Berechnung der Anzahl der personenbezogenen Daten (PII) nach Verzeichnissen nicht zur Verfügung. Siehe link:task-investigate-data.html#filter-data-by-sensitivity-and-content["Untersuchen Sie die in Ihrem Unternehmen gespeicherten Daten"].
* Die Option zur Integration von Daten mit AIP-Labels (Azure Information Protection) wurde deaktiviert. Siehe link:task-org-private-data.html["Private Daten organisieren"].




== 6. November 2023 (Version 1.26.3)


