@@ -29,6 +29,9 @@ Wenn in den folgenden Tabellen das als „Standard“ markierte System in der Re
 | Systemgröße | Spezifikationen | Instanztyp 
 
 
+| Extra Groß | 32 CPUs, 128 GB RAM, 1 tib gp3-SSD | https://aws.amazon.com/ec2/instance-types/m6i/["M6i.8xlarge"^] (Standard) 
+
+
 | Groß | 16 CPUs, 64 GB RAM, 500 gib SSD | https://aws.amazon.com/ec2/instance-types/m6i/["M6i.4xlarge"^] (Standard) m6a.4xlarge m5a.4xlarge m5.4xlarge m4.4xlarge 
 
 
@@ -44,6 +47,9 @@ Wenn in den folgenden Tabellen das als „Standard“ markierte System in der Re
 [cols="20,30,25"]
 |===
 | Systemgröße | Spezifikationen | Instanztyp 
+
+
+| Extra Groß | 32 CPUs, 128 GB RAM, 1 tib SSD (min. Durchsatz von 750 MB/s) | https://learn.microsoft.com/en-us/azure/virtual-machines/dv3-dsv3-series#dv3-series["Standard_D32_v3"^] (Standard) 
 
 
 | Groß | 16 CPUs, 64 GB RAM, 500 gib SSD | https://learn.microsoft.com/en-us/azure/virtual-machines/dv3-dsv3-series#dsv3-series["Standard_D16s_v3"^] (Standard) 
